# Kartana

./: Cargo.toml  Dioxus.toml  README.md  build_error.txt  build_error_xhtml.txt  check_out.txt  check_out_2.txt  check_output.txt  debug_block.txt  debug_out.txt  debug_output.txt  debug_output_2.txt  debug_separator.txt  epub_build_error.txt  epub_test_result.txt  errors.txt  test_failure.txt  test_output.txt  test_result.txt  test_result_final.txt  test_result_robust.txt  test_result_utf8.txt
.github/workflows/: rust.yml
assets/: main.css
assets/css/: base.css  cards.css  chapter_list.css  editor.css  forms.css  icons.css  layout.css  modal.css  reader.css  variables.css
crates/aozora_parser/: Cargo.toml  README.md
crates/aozora_parser/src/: block_parser.rs  css.rs  epub_generator.rs  lib.rs  linter.rs  parser.rs  tokenizer.rs  xhtml_generator.rs
crates/aozora_parser/src/epub_template/: title.xhtml
crates/aozora_parser/src/parser/: tests.rs
crates/aozora_parser/src/parser_test_data/: 桜桃_TEST.epub
crates/aozora_parser/src/parser_test_data/桜桃/item/: nav.xhtml  standard.opf  toc.ncx
crates/aozora_parser/src/parser_test_data/桜桃/item/xhtml/: 0001.xhtml  title.xhtml
crates/aozora_parser/src/parser_test_data/桜桃_TEST/item/: nav.xhtml  standard.opf
crates/aozora_parser/src/parser_test_data/桜桃_TEST/item/style/: text.css
crates/aozora_parser/src/parser_test_data/桜桃_TEST/item/xhtml/: 0001.xhtml  title.xhtml
crates/aozora_parser/src/tokenizer/: command.rs
data/series/Lintテスト/: Lintテスト.epub  Lintテスト.txt  series.toml
data/series/同志茜は高校生活を革命するそうです/: series.toml  第一話.epub  第一話.txt
data/series/富嶽百景/: series.toml  本文.txt
data/同志茜は高校生活を革命するそうです/: 第1話.txt
src/: aozora_parser.rs  decoration.rs  dump_sj.rs  editor.rs  editor_page.rs  main.rs  reader_page.rs  top_page.rs
src/aozora_parser/: block_decoration.rs  block_parser.rs  epub_generator.rs  parser.rs  text_decoration.rs  tokenizer.rs  xhtml_generator.rs
src/aozora_parser/epub_template/: container.xml  nav.xhtml  standard.opf
src/aozora_parser/parser/: tests.rs
src/aozora_parser/parser_test_data/: 人間失格_TEST.epub  桜桃.epub  桜桃_TEST.epub
src/aozora_parser/parser_test_data/人間失格/item/: nav.xhtml  standard.opf  toc.ncx
src/aozora_parser/parser_test_data/人間失格/item/xhtml/: 0001.xhtml  0002.xhtml  0003.xhtml  0004.xhtml  0005.xhtml  0006.xhtml  title.xhtml
src/aozora_parser/parser_test_data/人間失格_TEST/item/: nav.xhtml  standard.opf
src/aozora_parser/parser_test_data/桜桃_TEST/item/: nav.xhtml  standard.opf
src/aozora_parser/tokenizer/: command.rs
src/editor/: actions.rs  hooks.rs  page.rs  rich_editor.rs
src/editor/hooks/: use_file.rs  use_linter.rs
src/top_page/: works.rs
(+4 files in other folders)
