[workspace]
members = ["crates/aozora_parser"]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["6osciola <99010199+kinoko0518@users.noreply.github.com>"]

[package]
name = "kartana"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aozora_parser = { path = "crates/aozora_parser" }
chrono = "0.4.42"
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
encoding_rs = "0.8.35"
itertools = "0.14.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.10"
uuid = { version = "1.19.0", features = ["v4"] }
zip = "7.0.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
