[package]
name = "aozora_parser"
version = "0.1.0"
edition = "2024"
description = "Parser for Aozora Bunko format texts and EPUB generator"
authors = ["6osciola <99010199+kinoko0518@users.noreply.github.com>"]

[lib]
name = "aozora_parser"
path = "src/lib.rs"

[[bin]]
name = "karp"
path = "src/bin/karp.rs"

[dependencies]
chrono = "0.4.42"
clap = { version = "4", features = ["derive"] }
encoding_rs = "0.8.35"
itertools = "0.14.0"
regex = "1.12.2"
uuid = { version = "1.19.0", features = ["v4"] }
zip = "7.0.0"
